--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button class="menu-button" id="fileMenuButton">File</button>
       <div class="dropdown" id="fileDropdown">
         <button class="dropdown-item" id="openSheetButton">Open Sheet</button>
-        <button class="dropdown-item" id="openSourcesButton">Open Sources</button>
+        <!-- The following buttons will be added dynamically for each CSV source -->
       </div>
     </div>
   </nav>
@@ -26,9 +26,10 @@
     <table id="spreadsheet"></table>
   </main>
 
-  <!-- Hidden file inputs for sheet configuration and CSV sources -->
+  <!-- Hidden file input for sheet configuration -->
   <input type="file" id="sheetConfigInput" accept=".json" style="display: none;">
-  <input type="file" id="fileInput" accept=".csv" style="display: none;">
+  
+  <!-- The CSV file inputs for each source are created dynamically -->
 
   <!-- Include the functions library -->
   <script src="libraries/functions.js"></script>
