--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </button>
   
       <!-- Export Option with Icon -->
-      <button class="menu-button" onclick="exportTableToCSV('spreadsheet', 'my_data.csv')" id="exportSheetButton">
+      <button class="menu-button" onclick="exportTableToCSV('spreadsheet')" id="exportSheetButton">
         <span class="icon" aria-hidden="true">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
             <path d="M5 20h14v-2H5v2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
